api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
    env: prod
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: api
      env: prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api
        env: prod
    spec:
      containers:
      - name: nodejs
        image: ghcr.io/venoox/mern-k8s-template/api:v0.0.8
        ports:
          - containerPort: 3001
            name: http
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /live
            port: 3001
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 10
