db.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
    env: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      env: prod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        env: prod
    spec:
      containers:
      - image: mysql:8
        name: mysql
        args: [ "--default-authentication-plugin=mysql_native_password" ]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-init
          mountPath: /docker-entrypoint-initdb.d/init.sql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-init
        hostPath:
          path: /sql/init.sql
          type: File
