ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: simple-fanout
spec:
  rules:
  - host: k8s.tomazcuk.me
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api(?:/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 3001
